# seminar_in_algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  bench.py
common/: .gitignore  acronyms.tex  bibliography.bib
lib/libcds/: make_distrib.pl  readme
lib/libcds/cds/: backoff_strategy.h  bitop.h  cxx11_atomic.h  init.h  int_algo.h  numtraits.h  ref.h  refcounter.h  version.h
lib/libcds/cds/compiler/: backoff.h  bitop.h  cstdint_boost.h  cstdint_std.h  cxx11_atomic.h  cxx11_atomic_patches.h  cxx11_atomic_prepatches.h  defs.h
lib/libcds/cds/compiler/clang/: cxx11_atomic_prepatches.h  defs.h
lib/libcds/cds/compiler/gcc/: compiler_barriers.h  compiler_macro.h  cxx11_atomic_patches.h  defs.h
lib/libcds/cds/compiler/icl/: compiler_barriers.h  cxx11_atomic_patches_win.h  defs.h
lib/libcds/cds/compiler/vc/: compiler_barriers.h  defs.h
lib/libcds/cds/container/: base.h  basket_queue.h  cuckoo_base.h  cuckoo_map.h  cuckoo_set.h  ellen_bintree_base.h  ellen_bintree_map_impl.h  ellen_bintree_map_rcu.h  ellen_bintree_set_impl.h  ellen_bintree_set_rcu.h  lazy_kvlist_hp.h  lazy_kvlist_hrc.h  lazy_kvlist_impl.h  lazy_kvlist_nogc.h  lazy_kvlist_ptb.h  lazy_kvlist_rcu.h  lazy_list_base.h  lazy_list_hp.h  lazy_list_hrc.h  lazy_list_impl.h  lazy_list_nogc.h  lazy_list_ptb.h  lazy_list_rcu.h  michael_deque.h  michael_kvlist_hp.h  michael_kvlist_hrc.h  michael_kvlist_impl.h  michael_kvlist_nogc.h  michael_kvlist_ptb.h  michael_kvlist_rcu.h  michael_list_base.h  michael_list_hp.h  michael_list_hrc.h  michael_list_impl.h  michael_list_nogc.h  michael_list_ptb.h  michael_list_rcu.h  michael_map.h  michael_map_base.h  michael_map_nogc.h  (+35 more)
lib/libcds/cds/container/details/: guarded_ptr_cast.h  make_lazy_kvlist.h  make_lazy_list.h  make_michael_kvlist.h  make_michael_list.h  make_skip_list_map.h  make_skip_list_set.h  make_split_list_set.h
lib/libcds/cds/container/striped_map/: boost_flat_map.h  boost_list.h  boost_map.h  boost_slist.h  boost_unordered_map.h  std_hash_map.h  std_hash_map_std.h  std_hash_map_vc.h  std_list.h  std_map.h
lib/libcds/cds/container/striped_set/: adapter.h  boost_flat_set.h  boost_list.h  boost_set.h  boost_slist.h  boost_stable_vector.h  boost_unordered_set.h  boost_vector.h  std_hash_set.h  std_hash_set_std.h  std_hash_set_vc.h  std_list.h  (+2 more)
lib/libcds/cds/details/: aligned_allocator.h  aligned_type.h  allocator.h  binary_functor_wrapper.h  bitop_generic.h  bounded_array.h  bounded_container.h  comparator.h  cxx11_features.h  defs.h  functor_wrapper.h  hash_functor_selector.h  is_aligned.h  make_const_type.h  marked_ptr.h  noncopyable.h  static_functor.h  trivial_assign.h  type_padding.h  void_selector.h
lib/libcds/cds/gc/: all.h  exception.h  gc_fwd.h  guarded_ptr.h  hp.h  hp_decl.h  hp_impl.h  hrc.h  hrc_decl.h  hrc_impl.h  nogc.h  ptb.h  ptb_decl.h  ptb_impl.h
lib/libcds/cds/intrusive/: base.h  basket_queue.h  cuckoo_set.h  deque_stat.h  ellen_bintree_impl.h  ellen_bintree_rcu.h  lazy_list_base.h  lazy_list_hp.h  lazy_list_hrc.h  lazy_list_impl.h  lazy_list_nogc.h  lazy_list_ptb.h  lazy_list_rcu.h  michael_deque.h  michael_list_base.h  michael_list_hp.h  michael_list_hrc.h  michael_list_impl.h  michael_list_nogc.h  michael_list_ptb.h  michael_list_rcu.h  michael_set.h  michael_set_base.h  michael_set_nogc.h  michael_set_rcu.h  moir_queue.h  mspriority_queue.h  msqueue.h  node_traits.h  optimistic_queue.h  options.h  queue_stat.h  single_link_struct.h  skip_list_base.h  skip_list_hp.h  skip_list_hrc.h  skip_list_impl.h  skip_list_nogc.h  skip_list_ptb.h  skip_list_rcu.h  (+9 more)
lib/libcds/cds/lock/: array.h  rwlock.h  scoped_lock.h  spinlock.h
lib/libcds/cds/memory/: pool_allocator.h  vyukov_queue_pool.h
lib/libcds/cds/opt/: buffer.h  compare.h  hash.h  make_options_std.h  make_options_var.h  options.h  value_cleaner.h
lib/libcds/cds/os/: alloc_aligned.h  syserror.h  thread.h  timer.h  topology.h
lib/libcds/cds/threading/: model.h
lib/libcds/cds/urcu/: dispose_thread.h  exempt_ptr.h  general_buffered.h  general_instant.h  general_threaded.h  options.h  signal_buffered.h  signal_threaded.h
lib/libcds/cds/user_setup/: allocator.h  cache_line.h  threading.h
lib/libcds/projects/Win/: build-msbuild.cmd  build-vc10.cmd  build-vc11.cmd  build-vc12.cmd
lib/libcds/src/: dllmain.cpp  hrc_gc.cpp  hzp_const.h  hzp_gc.cpp  init.cpp  michael_heap.cpp  ptb_gc.cpp  topology_hpux.cpp  topology_linux.cpp  topology_osx.cpp  urcu_gp.cpp  urcu_sh.cpp
lib/libcds/tests/cppunit/: thread.h
lib/libcds/tests/data/: test-debug.conf  test-express.conf  test.conf
lib/libcds/tests/test-hdr/: size_check.h
lib/libcds/tests/unit/: ellen_bintree_update_desc_pool.cpp  ellen_bintree_update_desc_pool.h  michael_alloc.cpp  michael_alloc.h  nonconcurrent_iterator_sequence.h  print_cuckoo_stat.h  print_deque_stat.h  print_ellenbintree_stat.h  print_skip_list_stat.h
lib/linden/: common.h
lib/noble/: .gitignore  README
lib/spraylist/: linden_common.h  skiplist.h
lib/spraylist/include/: random.h  utils.h
paper/: .gitignore  Makefile  paper.Rnw  paper.tex
presentation/: .gitignore  Makefile  presentation.Rnw  presentation.tex
results/: results.csv
src/: CMakeLists.txt  globallock.cpp  globallock.h  heap.cpp  heap.h  linden.cpp  linden.h  noble.cpp  noble.h  pqbench.cpp  spraylist.cpp  spraylist.h
(+597 files in other folders)
